added pixel styles

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -24,3 +24,12 @@ html, body {
   height: calc(100vh - var(--titlebar-height))
 }
 
+.pixel {
+  border: 1px solid #747474;
+  box-sizing: border-box;
+  display: inline;
+}
+
+.filled {
+  background-color: #008577;
+}
