--- a/app/css/style.css
+++ b/app/css/style.css
@@ -23,3 +23,13 @@ html, body {
   overflow: auto;
   height: calc(100vh - var(--titlebar-height))
 }
+
+.controls {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.controls div {
+  margin: 20px;
+}
