--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,5 +1,6 @@
 :root {
   --titlebar-height: 24px;
+  --controls-height: 40px;
 }
 
 html, body {
@@ -26,10 +27,20 @@ html, body {
 
 .controls {
   display: flex;
-  flex-direction: row;
   justify-content: center;
+  align-items: center;
+
+  height: var(--controls-height);
 }
 
 .controls div {
-  margin: 20px;
+  margin: 0 20px;
+}
+
+.canvas {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  height: calc(100vh - var(--titlebar-height) - var(--controls-height));
 }
