making sure canvas is scrolled inside div if zoomed in

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -43,6 +43,8 @@ html, body {
   align-items: center;
 
   height: calc(100vh - var(--titlebar-height) - var(--controls-height));
+  width: 100%;
+  overflow: auto;
 }
 
 .number-input {
